@@ -19,7 +19,7 @@ routing engine.
 .SH OPTIONS
 
 .TP
-\fB\-e
+\fB\-c
 Specify command to be executed under batch mode.
 
 
